@@ -14,7 +14,7 @@ use Path::Tiny;
 my $args = {
     doc_lang => 'foo0',
     title => 'foo1',
-    origin => 'foo2',
+    creator => 'foo2',
     license => 'foo3',
     directionality => 'foo5',
     source_lang => 'foo6',
@@ -32,7 +32,7 @@ isa_ok($min, 'TBX::Min');
 
 ok(!$min->doc_lang, 'doc_lang not defined by default');
 ok(!$min->title, 'title not defined by default');
-ok(!$min->origin, 'origin not defined by default');
+ok(!$min->creator, 'creator not defined by default');
 ok(!$min->license, 'license not defined by default');
 ok(!$min->directionality, 'directionality not defined by default');
 ok(!$min->source_lang, 'source_lang not defined by default');
@@ -43,7 +43,7 @@ ok(!$min->concepts, 'concepts not defined by default');
 $min = TBX::Min->new($args);
 is($min->doc_lang, $args->{doc_lang}, 'correct doc_lang from constructor');
 is($min->title, $args->{title}, 'correct title from constructor');
-is($min->origin, $args->{origin}, 'correct origin from constructor');
+is($min->creator, $args->{creator}, 'correct creator from constructor');
 is($min->license, $args->{license}, 'correct license from constructor');
 is($min->directionality, $args->{directionality},
     'correct directionality from constructor');
@@ -62,8 +62,8 @@ is($min->doc_lang, $args->{doc_lang}, 'doc_lang correctly set');
 $min->title($args->{title});
 is($min->title, $args->{title}, 'title correctly set');
 
-$min->origin($args->{origin});
-is($min->origin, $args->{origin}, 'origin correctly set');
+$min->creator($args->{creator});
+is($min->creator, $args->{creator}, 'creator correctly set');
 
 $min->license($args->{license});
 is($min->license, $args->{license}, 'license correctly set');
