@@ -31,7 +31,7 @@ sub test_read {
 sub test_header {
     my ($min) = @_;
     is($min->title, 'TBX sample', 'correct title');
-    is($min->origin, 'Klaus-Dirk Schmidt', 'correct origin');
+    is($min->creator, 'Klaus-Dirk Schmidt', 'correct creator');
     is($min->license, 'CC BY license can be freely copied and modified',
         'correct license');
     is($min->directionality, 'bidirectional', 'correct directionality');
